JSDK-92 Upgrade SDK to 10.0.4 and migrate to plain entity API
- Bump java-sdk-plain to 10.0.4; drop java-sdk duplicate dep and assertj-core exclusions
- Migrate all LegacyApi calls to typed entity API:
  - callGetById / callGetAll replace callGet(SearchParameters, Class) in all caches
  - callGetFeed(EntityDescriptor) replaces callGetFeed(GetFeedParameters, Class) in DataFeedLoader
  - callGetCountOf(EntityDescriptor) replaces callGetCountOf(SearchParameters) in GetCountApp
- Replace LocalDateTime with Instant for SDK date fields (dateTime, start, stop, activeFrom, activeTo)
- Replace localDateTimeToString with Objects.toString(instant, "") for null-safe ISO output
- Use Optional.ofNullable for chained null guards in CsvExporter
- Replace UserSearch.isDriver (deprecated) with DriverEntity descriptor
- Replace -source/-target with maven.compiler.release for correct JDK module location
- Replace checkstyle.xml / maven-checkstyle-plugin with .editorconfig

Co-Authored-By: Claude Sonnet 4 (1M context) <noreply@anthropic.com>