@@ -1,347 +1,167 @@
 package com.geotab.sdk.textmessage;
 
-import static com.geotab.http.invoker.ServerInvoker.DEFAULT_TIMEOUT;
-import static com.geotab.util.DateTimeUtil.nowUtcLocalDateTime;
+import static com.geotab.plain.Entities.DeviceEntity;
+import static com.geotab.plain.Entities.TextMessageEntity;
+import static com.geotab.plain.Entities.UserEntity;
+import static com.geotab.util.Util.apply;
+import static java.lang.System.out;
 
 import com.geotab.api.Api;
-import com.geotab.api.GeotabApi;
-import com.geotab.http.exception.DbUnavailableException;
-import com.geotab.http.exception.InvalidUserException;
-import com.geotab.http.request.param.EntityParameters;
-import com.geotab.http.request.param.SearchParameters;
-import com.geotab.model.Id;
-import com.geotab.model.entity.device.Device;
-import com.geotab.model.entity.textmessage.CannedResponseContent;
-import com.geotab.model.entity.textmessage.CannedResponseOption;
-import com.geotab.model.entity.textmessage.LocationContent;
-import com.geotab.model.entity.textmessage.TextContent;
-import com.geotab.model.entity.textmessage.TextMessage;
-import com.geotab.model.entity.user.User;
-import com.geotab.model.login.LoginResult;
-import com.geotab.model.search.TextMessageSearch;
-import com.geotab.model.search.UserSearch;
+import com.geotab.plain.objectmodel.CannedResponseContent;
+import com.geotab.plain.objectmodel.CannedResponseOption;
+import com.geotab.plain.objectmodel.Device;
+import com.geotab.plain.objectmodel.DeviceSearch;
+import com.geotab.plain.objectmodel.LocationContent;
+import com.geotab.plain.objectmodel.TextContent;
+import com.geotab.plain.objectmodel.TextMessage;
+import com.geotab.plain.objectmodel.TextMessageSearch;
+import com.geotab.plain.objectmodel.User;
+import com.geotab.plain.objectmodel.UserSearch;
 import com.geotab.sdk.Util.Cmd;
-import com.google.common.collect.Lists;
-import java.time.LocalDateTime;
-import java.util.ArrayList;
+import java.time.Instant;
 import java.util.List;
-import java.util.Optional;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 public class SendTextMessageApp {
 
-  private static final Logger log = LoggerFactory.getLogger(SendTextMessageApp.class);
-
   public static void main(String[] args) throws Exception {
-    // Process command line arguments
-    Cmd cmd = new Cmd(SendTextMessageApp.class);
+    var cmd = new Cmd(SendTextMessageApp.class);
 
-    // Create the Geotab API object used to make calls to the server
-    try (Api api = new GeotabApi(cmd.credentials, cmd.server, DEFAULT_TIMEOUT)) {
+    try (Api api = cmd.newApi()) {
+      var messageRecipient =
+        api.callGet(DeviceEntity, new DeviceSearch(), 1).orElseThrow().getFirst();
+      out.format("Messages will be sent to %s%n", messageRecipient.getName());
 
-      // Authenticate user
-      authenticate(api);
+      var sender = api
+        .callGet(UserEntity, apply(new UserSearch(), s -> s.name = cmd.credentials.getUserName()), 1)
+        .orElseThrow().getFirst();
+      out.format("Messages will be sent from %s%n", sender.getName());
 
-      // Get a device to send text messages to
-      Device messageRecipient = getTargetDevice(api);
-      log.info("Messages will be send to " + messageRecipient.getName());
-
-      // Get the User who the messages will be sent from
-      User sender = getUser(api, cmd.credentials.getUserName());
-      log.info("Messages will be sent from {} ", sender.getName());
-
-      // Sample TextMessage and reply
       sendBasicMessageAndMockDeviceReply(api, sender, messageRecipient);
-
-      // Sample of sending a text message with a GPS location
       sendMessageWithGpsLocation(api, sender, messageRecipient);
     }
   }
 
-  private static LoginResult authenticate(Api api) {
-    log.debug("Authenticating…");
+  private static void sendBasicMessageAndMockDeviceReply(Api api, User sender, Device messageRecipient) {
+    // Basic Message: A basic text message with a string message.
+    var nowUtc = Instant.now();
+    var basicTextMessage = apply(new TextMessage(), m -> {
+      m.sent = nowUtc;
+      m.delivered = nowUtc;
+      m.user = sender;
+      m.device = messageRecipient;
+      m.messageContent =
+        apply(
+          new TextContent(),
+          c -> {
+            c.message = "Testing: Geotab API example text message";
+            c.urgent = false;
+          });
+      m.isDirectionToVehicle = true;
+    });
 
-    LoginResult loginResult = null;
-
-    // Authenticate user
-    try {
-      loginResult = api.authenticate();
-      log.info("Successfully Authenticated");
-    } catch (InvalidUserException exception) {
-      log.error("Invalid user: ", exception);
-      System.exit(1);
-    } catch (DbUnavailableException exception) {
-      log.error("Database unavailable: ", exception);
-      System.exit(1);
-    } catch (Exception exception) {
-      log.error("Failed to authenticate user: ", exception);
-      System.exit(1);
-    }
-
-    return loginResult;
-  }
-
-  private static Device getTargetDevice(Api api) {
-    log.debug("Get 1 device…");
-    try {
-      Optional<List<Device>> devices = api.callGet(SearchParameters.searchParamsBuilder()
-          .typeName("Device").resultsLimit(1).build(), Device.class);
-      if (devices.isPresent() && !devices.get().isEmpty()) {
-        return devices.get().get(0);
-      }
-
-      log.error("Datastore does not contain any devices !");
-      System.exit(1);
-    } catch (Exception exception) {
-      log.error("Failed to get existing devices ", exception);
-      System.exit(1);
-    }
-
-    return null;
-  }
-
-  private static User getUser(Api api, String userName) {
-    log.debug("Get user {}…", userName);
-    try {
-      Optional<List<User>> users = api.callGet(SearchParameters.searchParamsBuilder()
-          .typeName("User").search(UserSearch.builder().name(userName).build()).build(), User.class);
-
-      if (users.isPresent() && !users.get().isEmpty()) {
-        return users.get().get(0);
-      }
-
-      log.error("Could not find the user you are authenticated in as - {} !", userName);
-      System.exit(1);
-    } catch (Exception exception) {
-      log.error("Failed to find user {} !", userName, exception);
-      System.exit(1);
-    }
-
-    return null;
-  }
-
-  private static List<TextMessage> getTextMessages(Api api, LocalDateTime modifiedSince) {
-    log.debug("Get TextMessages after {}…", modifiedSince);
-    try {
-      return api.callGet(SearchParameters.searchParamsBuilder().typeName("TextMessage")
-              .search(TextMessageSearch.builder().modifiedSinceDate(modifiedSince).build()).build(), TextMessage.class)
-          .orElse(new ArrayList<>());
-    } catch (Exception exception) {
-      log.error("Failed to get TextMessages after {} ", modifiedSince, exception);
-      System.exit(1);
-    }
-
-    return new ArrayList<>();
-  }
-
-  private static void sendBasicMessageAndMockDeviceReply(Api api, User sender,
-      Device messageRecipient) {
-    /*
-     * Basic Message
-     * A basic text message with a string message.
-     */
-
-    // Set up the message content
-    TextContent messageContent = new TextContent("Testing: Geotab API example text message",
-        false);
-
-    // Construct the text message
-    LocalDateTime nowUtc = nowUtcLocalDateTime();
-    TextMessage basicTextMessage = TextMessage.builder()
-        .sent(nowUtc)
-        .delivered(nowUtc)
-        .user(sender)
-        .device(messageRecipient)
-        .messageContent(messageContent)
-        .isDirectionToVehicle(true)
-        .build();
-
-    // Add the text message. MyGeotab will take care of the actual sending.
-    try {
-      Optional<Id> response = api.callAdd(EntityParameters.entityParamsBuilder()
-          .typeName("TextMessage").entity(basicTextMessage).build());
-
-      if (response.isPresent()) {
-        log.info("Basic TextMessage added with id {} .", response.get().getId());
-        basicTextMessage.setId(response.get());
-      } else {
-        log.warn("Basic TextMessage  not added; no id returned");
-      }
-    } catch (Exception exception) {
-      // Catch and display any error that occur when adding the TextMessage
-      log.error("Failed to import Basic TextMessage", exception);
-      return;
-    }
+    var basicId = api.callAdd(TextMessageEntity, basicTextMessage).orElseThrow();
+    out.format("Basic TextMessage added with id %s%n", basicId.getId());
+    basicTextMessage.setId(basicId);
 
     /*
      * Canned Response Message
-     * A canned response message is a text message with a list of predetermined responses
-     * the receiver can select from.
+     * A canned response message with a list of predetermined responses the receiver can select from.
      */
+    var cannedResponseContent = apply(new CannedResponseContent(), c -> {
+      c.message = "Testing: Geotab API example text message with response options";
+      c.cannedResponseOptions =
+        List.of(apply(new CannedResponseOption(), o -> o.text = "Ok"));
+    });
 
-    // Example of sending a text message with canned a response.
-    // Set up message and response options.
-    CannedResponseContent cannedResponseContent = CannedResponseContent
-        .cannedResponseContentBuilder()
-        .message("Testing: Geotab API example text message with response options")
-        .cannedResponseOptions(Lists.newArrayList(new CannedResponseOption("Ok")))
-        .build();
+    var textMessageWithResponses = apply(new TextMessage(), m -> {
+      m.device = messageRecipient;
+      m.messageContent = cannedResponseContent;
+      m.isDirectionToVehicle = true;
+    });
 
-    // Construct the text message.
-    TextMessage textMessageWithResponses = TextMessage.builder()
-        .device(messageRecipient)
-        .messageContent(cannedResponseContent)
-        .isDirectionToVehicle(true)
-        .build();
+    var cannedId = api.callAdd(TextMessageEntity, textMessageWithResponses).orElseThrow();
+    out.format("Canned TextMessage added with id %s%n", cannedId.getId());
+    textMessageWithResponses.setId(cannedId);
 
-    // Add the text message, Geotab will take care of the sending process.
-    try {
-      Optional<Id> response = api.callAdd(EntityParameters.entityParamsBuilder()
-          .typeName("TextMessage").entity(textMessageWithResponses).build());
+    var lastKnownSentDate = nowUtc;
 
-      if (response.isPresent()) {
-        log.info("Canned TextMessage added with id {} .", response.get().getId());
-        textMessageWithResponses.setId(response.get());
-      } else {
-        log.warn("Canned TextMessage not added; no id returned");
-      }
-    } catch (Exception exception) {
-      // Catch and display any error that occur when adding the TextMessage
-      log.error("Failed to import Canned TextMessage", exception);
-      return;
-    }
-
-    // Keep track of our last "known" sent date. We will send another message
-    // but for the purpose of this example we are going to pretend it's from a Device.
-    LocalDateTime lastKnownSentDate = nowUtc;
-
-    //-------
+    // -------
     // START: MOCK A DEVICE REPLY.
     // **FOR EXAMPLE PURPOSES ONLY.**
-    // THIS LOGIC IS HANDELED BY THE MYGEOTAB SYSTEM.
+    // THIS LOGIC IS HANDLED BY THE MYGEOTAB SYSTEM.
     // YOU WOULD NOT NORMALLY DO THIS IN A WORKING ENVIRONMENT.
-    //-------
+    // -------
 
-    // Here we are adding a new text message with "isDirectionToVehicle = false",
-    // this means the message came from the device. Normally, these will be sent
-    // by the Garmin device. This is just to show how to search for new responses.
-    TextMessage textMessageFromDevice = TextMessage.builder()
-        .sent(nowUtc)
-        .delivered(nowUtc)
-        .user(sender)
-        .device(messageRecipient)
-        .messageContent(TextContent.textContentBuilder()
-            .message(cannedResponseContent.getCannedResponseOptions().get(0).getText())
-            .urgent(false)
-            .build())
-        .parentMessage(textMessageWithResponses)
-        .isDirectionToVehicle(true)
-        .build();
+    var textMessageFromDevice = apply(new TextMessage(), m -> {
+      m.sent = nowUtc;
+      m.delivered = nowUtc;
+      m.user = sender;
+      m.device = messageRecipient;
+      m.messageContent = apply(new TextContent(), c -> {
+        c.message = cannedResponseContent.cannedResponseOptions.getFirst().text;
+        c.urgent = false;
+      });
+      m.parentMessage = textMessageWithResponses;
+      m.isDirectionToVehicle = true;
+    });
 
-    try {
-      Optional<Id> response = api.callAdd(EntityParameters.entityParamsBuilder()
-          .typeName("TextMessage").entity(textMessageFromDevice).build());
+    var replyId = api.callAdd(TextMessageEntity, textMessageFromDevice).orElseThrow();
+    out.format("Response TextMessage added with id %s%n", replyId.getId());
 
-      if (response.isPresent()) {
-        log.info("Response TextMessage added with id {} .", response.get().getId());
-        textMessageFromDevice.setId(response.get());
-      } else {
-        log.warn("Response TextMessage not added; no id returned");
-      }
-    } catch (Exception exception) {
-      // Catch and display any error that occur when adding the TextMessage
-      log.error("Failed to import Response TextMessage", exception);
-    }
-
-    //-------
+    // -------
     // END: MOCK A DEVICE REPLY
-    //-------
+    // -------
 
-    // Request any messages that have been delivered/sent/read since the date provided.
-    List<TextMessage> textMessages = getTextMessages(api, lastKnownSentDate);
-    log.info("{} TextMessages delivered/sent/read", textMessages.size());
+    var textMessages = api
+      .callGet(TextMessageEntity, apply(new TextMessageSearch(), s -> s.modifiedSinceDate = lastKnownSentDate), null)
+      .orElse(List.of());
+    out.format("%s TextMessages delivered/sent/read%n", textMessages.size());
   }
 
-  private static void sendMessageWithGpsLocation(Api api, User sender,
-      Device messageRecipient) {
-    LocalDateTime lastKnownSentDate = nowUtcLocalDateTime();
+  private static void sendMessageWithGpsLocation(Api api, User sender, Device messageRecipient) {
+    var lastKnownSentDate = Instant.now();
 
     /*
      * Location Message
-     * A location message is a message with a location.
-     * A series of location messages can be sent in succession to comprise a route.
-     * A clear message can be sent to clear any previous location messages.
+     * A message with a GPS location. A series can be sent to comprise a route.
+     * A clear message clears any previous location messages.
      */
 
-    // Example of sending a text message with a GPS location
+    // Send a "Clear Previous Stops" message
+    var clearMessage = apply(new TextMessage(), m -> {
+      m.device = messageRecipient;
+      m.user = sender;
+      m.messageContent = apply(new LocationContent(), c -> {
+        c.message = "Testing: Geotab API example clear all stops message";
+        c.address = "Reset Stops";
+        c.latitude = 0d;
+        c.longitude = 0d;
+      });
+      m.isDirectionToVehicle = true;
+    });
 
-    // Set up message and GPS location
-    LocationContent clearStopsContent = LocationContent.locationContentBuilder()
-        .message("Testing: Geotab API example clear all stops message")
-        .address("Reset Stops")
-        .latitude(0d)
-        .longitude(0d)
-        .build();
+    var clearId = api.callAdd(TextMessageEntity, clearMessage).orElseThrow();
+    out.format("Clear Stop TextMessage added with id %s%n", clearId.getId());
 
-    // Construct a "Clear Previous Stops" message
-    TextMessage clearMessage = TextMessage.builder()
-        .device(messageRecipient)
-        .user(sender)
-        .messageContent(clearStopsContent)
-        .isDirectionToVehicle(true)
-        .build();
+    // Send a location message
+    var locationMessage = apply(new TextMessage(), m -> {
+      m.device = messageRecipient;
+      m.user = sender;
+      m.messageContent = apply(new LocationContent(), c -> {
+        c.message = "Testing: Geotab API example location message";
+        c.address = "Geotab";
+        c.latitude = 43.452879d;
+        c.longitude = -79.701648d;
+      });
+      m.isDirectionToVehicle = true;
+    });
 
-    // Add the clear stops text message, Geotab will take care of the sending process.
-    try {
-      Optional<Id> response = api.callAdd(EntityParameters.entityParamsBuilder()
-          .typeName("TextMessage").entity(clearMessage).build());
+    var locationId = api.callAdd(TextMessageEntity, locationMessage).orElseThrow();
+    out.format("Location TextMessage added with id %s%n", locationId.getId());
 
-      if (response.isPresent()) {
-        log.info("Clear Stop TextMessage added with id {} .", response.get().getId());
-        clearMessage.setId(response.get());
-      } else {
-        log.warn("Clear Stop TextMessage not added; no id returned");
-      }
-    } catch (Exception exception) {
-      // Catch and display any error that occur when adding the TextMessage
-      log.error("Failed to import Clear Stop TextMessage", exception);
-    }
-
-    // Set up message and GPS location
-    LocationContent withGpsLocation = LocationContent.locationContentBuilder()
-        .message("Testing: Geotab API example location message")
-        .address("Geotab")
-        .latitude(43.452879d)
-        .longitude(-79.701648d)
-        .build();
-
-    // Construct the location text message.
-    TextMessage locationMessage = TextMessage.builder()
-        .device(messageRecipient)
-        .user(sender)
-        .messageContent(withGpsLocation)
-        .isDirectionToVehicle(true)
-        .build();
-
-    // Add the clear stops text message, Geotab will take care of the sending process.
-    try {
-      Optional<Id> response = api.callAdd(EntityParameters.entityParamsBuilder()
-          .typeName("TextMessage").entity(locationMessage).build());
-
-      if (response.isPresent()) {
-        log.info("Location TextMessage added with id {} .", response.get().getId());
-        locationMessage.setId(response.get());
-      } else {
-        log.warn("Location TextMessage not added; no id returned");
-      }
-    } catch (Exception exception) {
-      // Catch and display any error that occur when adding the TextMessage
-      log.error("Failed to import Location TextMessage", exception);
-    }
-
-    // Request any messages that have been delivered/sent/read since the date provided.
-    List<TextMessage> textMessages = getTextMessages(api, lastKnownSentDate);
-    log.info("{} TextMessages delivered/sent/read", textMessages.size());
+    var textMessages = api
+      .callGet(TextMessageEntity, apply(new TextMessageSearch(), s -> s.modifiedSinceDate = lastKnownSentDate), null)
+      .orElse(List.of());
+    out.format("%s TextMessages delivered/sent/read%n", textMessages.size());
   }
 }
